@@ -1,3 +1,8 @@
+2018-12-26 belangeo <belangeo@gmail.com>
+
+    * Added a getPyoExamples function and changed example function to be able to
+      execute one of the example.
+
 2018-12-14 belangeo <belangeo@gmail.com>
 
     * Compiling for python 64-bit on Windows now work.
